<resources>
    <string name="app_name" translatable="false">Vefer Caller</string>
    <string name="all">All</string>
    <string name="top">Top</string>
    <string name="s_new">New</string>
    <string name="permissionPhoneDescription">Set the application as your default phone apps</string>
    <string name="permissionContactsDescription">Allow the application to access your contacts</string>
    <string name="permissionOverlayDescription">Allow display over other app</string>
    <string name="give_permissions_needed_to_show_the_call_screen">Give permissions needed to show the call screen</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="settings">Settings</string>
    <string name="call_theme">Call theme</string>
    <string name="flash">Flash</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="application_language">App language</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate us</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="language">Language</string>
    <string name="apply_to_selected">Apply to Selected</string>
    <string name="apply_to_all">Apply to all</string>
    <string name="apply">Apply</string>
    <string name="choose_a_contact_number">Choose A Contact Number</string>
    <string name="calling">Calling...</string>
    <string name="choose_a_sim_card">Choose a SIM card</string>
    <string name="your_image">Your Image</string>
    <string name="welcome">Welcome</string>
    <string name="express_your_uniqueness">Express Your Uniqueness</string>
    <string name="popular">Popular</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="searching_for_your_phone_s_call_screen">Searching For Your Phone\'s Call Screen</string>
    <string name="theme_applied">Theme applied!</string>
    <string name="your_contacts">Your Contacts</string>
    <string name="write_here">Write Here...</string>
    <string name="take_your_time_amp_enjoy_new_incredible_call_screen_themes">Take your time and Enjoy new incredible call screen themes</string>
    <string name="the_best_way_to_diversify_your_phone_call_screen">The best way to diversify your phone call screen</string>
    <string name="select_contacts_to_apply">Select contacts to apply</string>
    <string name="write_here_to_search">Write here to search...</string>
    <string name="call">Call...</string>
    <string name="mute">Mute</string>
    <string name="keypad">Keypad</string>
    <string name="speaker">Speaker</string>
    <string name="add_call">Add call</string>
    <string name="switch_call">Switch call</string>
</resources>