<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.pecall.poscreen.ui.call.fragment.CallViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintDimensionRatio="360:772">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintDimensionRatio="332:28"
                app:layout_constraintWidth_percent="0.9222"
                app:layout_constraintVertical_bias="0.163978"
                android:gravity="center"
                app:autoSizeTextType="uniform"
                app:autoSizeMaxTextSize="26sp"
                app:autoSizeMinTextSize="1sp"
                android:textColor="#FFFFFF"
                android:fontFamily="@font/comfortaa_700"
                android:text="@{viewModel.contact.contactName}"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintDimensionRatio="332:22"
                app:layout_constraintWidth_percent="0.9222"
                app:layout_constraintVertical_bias="0.22666666"
                android:gravity="center"
                app:autoSizeTextType="uniform"
                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="1sp"
                android:textColor="#FFFFFF"
                android:fontFamily="@font/comfortaa_700"
                android:text="@{viewModel.contact.contactNumber}"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintDimensionRatio="70:95"
                app:layout_constraintWidth_percent="0.194444"
                app:layout_constraintVertical_bias="0.778"
                android:src="@drawable/button_hangup"
                android:onClick="@{(_) -> viewModel.cancelCall()}"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintDimensionRatio="280:179"
                app:layout_constraintWidth_percent="0.7777777"
                app:layout_constraintVertical_bias="0.5"
                android:orientation="vertical">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="80"
                    android:orientation="horizontal">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="80"
                        android:onClick="@{(_) -> viewModel.onMuteClick()}">
                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintDimensionRatio="80:64"
                            android:src="@{viewModel.isMuteOn ? @drawable/button_mute_on : @drawable/button_mute}"/>
                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintDimensionRatio="80:16"
                            android:gravity="center"
                            app:autoSizeTextType="uniform"
                            app:autoSizeMaxTextSize="14sp"
                            app:autoSizeMinTextSize="1sp"
                            textColorInt="@{viewModel.isMuteOn ? 0xFFD7D3CE : 0xFFFFFFFF}"
                            android:fontFamily="@font/comfortaa_700"
                            android:text="@string/mute"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <android.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="20"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/buttonKeys"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="80">
                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintDimensionRatio="80:64"
                            android:src="@drawable/button_keyboard"/>
                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintDimensionRatio="80:16"
                            android:gravity="center"
                            app:autoSizeTextType="uniform"
                            app:autoSizeMaxTextSize="14sp"
                            app:autoSizeMinTextSize="1sp"
                            android:textColor="@color/white"
                            android:fontFamily="@font/comfortaa_700"
                            android:text="@string/keypad"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <android.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="20"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="80"
                        android:onClick="@{(_) -> viewModel.toggleCallType()}">
                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintDimensionRatio="80:64"
                            android:src="@{viewModel.isSpeakerModeOn ? @drawable/button_speaker_on : @drawable/button_speaker}"/>
                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintDimensionRatio="80:16"
                            android:gravity="center"
                            app:autoSizeTextType="uniform"
                            app:autoSizeMaxTextSize="14sp"
                            app:autoSizeMinTextSize="1sp"
                            textColorInt="@{viewModel.isSpeakerModeOn ? 0xFFD7D3CE : 0xFFFFFFFF}"
                            android:fontFamily="@font/comfortaa_700"
                            android:text="@string/speaker"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>
                <android.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="19"/>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="80"
                    android:orientation="horizontal">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="80"
                        android:onClick="@{(_) -> viewModel.onAddClick()}">
                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintDimensionRatio="80:64"
                            android:src="@drawable/button_add_call"/>
                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintDimensionRatio="80:16"
                            android:gravity="center"
                            app:autoSizeTextType="uniform"
                            app:autoSizeMaxTextSize="14sp"
                            app:autoSizeMinTextSize="1sp"
                            android:textColor="@color/white"
                            android:fontFamily="@font/comfortaa_700"
                            android:text="@string/add_call"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <android.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="20"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="80"
                        android:onClick="@{(_) -> viewModel.onSwapClick()}">
                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintDimensionRatio="80:64"
                            android:src="@drawable/button_swap"/>
                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintDimensionRatio="80:16"
                            android:gravity="center"
                            app:autoSizeTextType="uniform"
                            app:autoSizeMaxTextSize="14sp"
                            app:autoSizeMinTextSize="1sp"
                            android:textColor="@color/white"
                            android:fontFamily="@font/comfortaa_700"
                            android:text="@string/switch_call"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <android.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="100"/>

                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/keyboard"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintHeight_percent="0.829"
            android:background="#809CD9FC"
            android:orientation="vertical"
            android:visibility="gone">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="360:59">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/buttonCloseKeyboard"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintDimensionRatio="33:21"
                        app:layout_constraintHeight_percent="0.3559"
                        app:layout_constraintHorizontal_bias="0.0856"
                        android:src="@drawable/ic_back"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="693">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintDimensionRatio="360:581">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintDimensionRatio="332:28"
                        app:layout_constraintWidth_percent="0.9222"
                        app:layout_constraintVertical_bias="0.05"
                        android:gravity="center"
                        app:autoSizeTextType="uniform"
                        app:autoSizeMaxTextSize="26sp"
                        app:autoSizeMinTextSize="1sp"
                        android:textColor="#FFFFFF"
                        android:fontFamily="@font/comfortaa_700"
                        android:singleLine="true"
                        android:lines="1"
                        android:ellipsize="start"
                        android:text="@{viewModel.dialCache}"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="360:505">
                        <androidx.recyclerview.widget.RecyclerView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintWidth_percent="0.91666666"
                            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                            app:spanCount="3"
                            android:overScrollMode="never"
                            android:scrollbars="none"
                            android:adapter="@{viewModel.dialAdapter}"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>