<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.yee.zer.ui.custom.ScalableCardView.ScaleType"/>
        <import type="android.view.View"/>
        <import type="com.yee.zer.ui.contacts.ContactsActivity.Mode"/>
        <import type="com.yee.zer.R"/>
        <variable
            name="viewModel"
            type="com.yee.zer.ui.contacts.ContactsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:background="#4D67DE">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:clipChildren="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="360:71">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintHeight_percent="0.647887"
                        app:layout_constraintHorizontal_bias="0.05"
                        android:src="@drawable/button_back"
                        android:onClick="@{(_) -> viewModel.onBackClick()}"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintDimensionRatio="265:43"
                        app:layout_constraintHeight_percent="0.6056"
                        app:layout_constraintHorizontal_bias="0.83"
                        app:layout_constraintVertical_bias="0.964"
                        android:background="@drawable/bg_search">

                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintDimensionRatio="193:12"
                            app:layout_constraintHeight_percent="0.279"
                            app:layout_constraintHorizontal_bias="0.222"
                            android:gravity="center_vertical"
                            android:background="@null"
                            android:textCursorDrawable="@drawable/text_cursor"
                            android:textSize="10sp"
                            android:textColor="#FFFFFF"
                            android:textColorHint="#FFFFFF"
                            android:fontFamily="@font/baloo_2_400"
                            android:singleLine="true"
                            android:inputType="text"
                            android:text="@={viewModel.searchQuery}"
                            android:hint="@string/write_here_to_search"
                            tools:ignore="Autofill,LabelFor,TooDeepLayout" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintDimensionRatio="1:1"
                            app:layout_constraintHeight_percent="0.558"
                            app:layout_constraintHorizontal_bias="0.9336"
                            android:src="@drawable/ic_close"
                            visibleIf="@{viewModel.searchQuery.length() > 0}"
                            android:onClick='@{(_) -> viewModel.onClearClick()}'/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:clipChildren="false">

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="none"
                    android:overScrollMode="never">
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                            app:spanCount="4"
                            android:orientation="vertical"
                            android:scrollbars="none"
                            android:overScrollMode="never"
                            android:adapter="@{viewModel.adapterContacts}"/>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <androidx.legacy.widget.Space
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintDimensionRatio="360:146"/>
                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.core.widget.NestedScrollView>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="360:136"
                    visibleIf="@{viewModel.mode == Mode.CONTACT_SELECTOR}"
                    android:clipChildren="false">

                    <com.yee.zer.ui.custom.ScalableCardView
                        android:id="@+id/buttonApply"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintDimensionRatio="258:43"
                        app:layout_constraintHeight_percent="0.316"
                        app:cardBackgroundColor="@android:color/transparent"
                        app:scale_by="byHeight"
                        app:scalable_corner_radius="0.232558">
                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/gradient_orange">
                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintDimensionRatio="258:22"
                                android:gravity="center"
                                app:autoSizeTextType="uniform"
                                app:autoSizeMaxTextSize="20sp"
                                app:autoSizeMinTextSize="1sp"
                                android:textColor="#FFFFFF"
                                android:fontFamily="@font/baloo_2_700"
                                android:text="@string/apply_to_selected"/>
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </com.yee.zer.ui.custom.ScalableCardView>

                    <com.yee.zer.ui.custom.ScalableCardView
                        android:id="@+id/buttonCancel"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintDimensionRatio="124:43"
                        app:layout_constraintHeight_percent="0.316"
                        app:layout_constraintVertical_bias="0.7849"
                        app:cardBackgroundColor="@android:color/transparent"
                        app:scale_by="byHeight"
                        app:scalable_corner_radius="0.232558">
                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/gradient_orange">
                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintDimensionRatio="124:22"
                                android:gravity="center"
                                app:autoSizeTextType="uniform"
                                app:autoSizeMaxTextSize="20sp"
                                app:autoSizeMinTextSize="1sp"
                                android:textColor="#FFFFFF"
                                android:fontFamily="@font/baloo_2_700"
                                android:text="@string/cancel"/>
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </com.yee.zer.ui.custom.ScalableCardView>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>